<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="Title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/component_margin_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details_date"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/details_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details_duration"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/details_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/component_margin_small">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details_time"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/details_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details_marks"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/details_marks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/details_description"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum_long" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/details_syllabus"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/details_syllabus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/details_eligibility"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/details_eligibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum"/>

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/details_contact"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/details_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum"/>

        <Button
            android:id="@+id/details_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_margin"
            android:padding="@dimen/component_margin_small"
            android:text="Enroll/Navigate/Result"/>

    </LinearLayout>

</ScrollView>