<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/screen_padding">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:text="Title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/candidate_details"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/result_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/candidate_details"
            android:layout_margin="@dimen/component_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/result_scorecard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin_small"
            android:layout_marginBottom="@dimen/component_margin"
            android:text="@string/lorem_ipsum_long" />


    </LinearLayout>
</ScrollView>